# Interest

./: README.md  README_RU.md
backend/: .env.example  Makefile  README.md  app.py  pyproject.toml
backend/docker/: Dockerfile.backend  docker-compose.backend.yml
backend/src/database/: database_connection.py  entities.sql
backend/src/repository/: favorites_repository.py  search_repository.py  users_repository.py
backend/src/routes/: favorites_router.py  main_router.py  search_router.py  users_router.py
backend/src/schemas/request/: favorites_request.py  search_request.py  user_request.py
backend/src/schemas/response/: favorites_response.py  search_response.py  user_response.py
mobile/interest/: .gitignore  pubspec.yaml
mobile/interest/android/app/: build.gradle
mobile/interest/android/app/src/main/: AndroidManifest.xml
mobile/interest/ios/Runner.xcodeproj/: project.pbxproj
mobile/interest/lib/: main.dart
mobile/interest/lib/features/additional_options/view/: additional_options_page.dart  view.dart
mobile/interest/lib/features/chats/view/: chat_list_page.dart  (+1 more)
mobile/interest/lib/l10n/: app_en.arb  app_ru.arb  locale_provider.dart
mobile/interest/lib/services/api/: api_service_search.dart  api_service_user.dart
mobile/interest/lib/services/supabase/: auth_gate.dart  auth_service.dart
mobile/interest/lib/ui/components/: user.dart
mobile/interest/lib/ui/themes/: theme_provider.dart  themes.dart
mobile/interest/linux/: .last_build_id  CMakeLists.txt
mobile/interest/linux/flutter_assets/: NOTICES
mobile/interest/test/: widget_test.dart
(+55 files in other folders)
